--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <!-- Responsive navbar-->
         <nav>
-            <a class="ti"  href="#">Patoland</a>
+            <a class="ti"  href="#">Patolande</a>
 			<a href="#">Pato</a>
 			<a href="#">Patomano</a>
 			<a href="#">patofemea</a>
